<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/sample2">


    <TextView
        android:id="@+id/titre"
        android:layout_width="251dp"
        android:layout_height="101dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="RTO"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="159dp"
        android:layout_height="101dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/titre"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/valider"
        android:layout_width="148dp"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttonshapecolor"
        android:text="VALIDER"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <projet.license.PaintView
        android:id="@+id/paintView"
        android:layout_width="wrap_content"
        android:layout_height="504dp"
        android:layout_below="@+id/joueur"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="75dp" />


    <Button
        android:id="@+id/button_effacer"
        android:layout_width="148dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/buttonshapecolor"
        android:text="EFFACER"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/adversaire"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/titre"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:fontFamily="cursive"
        android:text="Adversaire"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coupAdversaire"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/adversaire"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:fontFamily="cursive"
        android:text="coup"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreAdversaire"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/coupAdversaire"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/joueur"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/titre"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/adversaire"
        android:fontFamily="cursive"
        android:text="Vous"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/coupJoueur"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@+id/joueur"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/coupAdversaire"
        android:fontFamily="cursive"
        android:text="coup"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scoreJoueur"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/coupJoueur"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_toEndOf="@+id/scoreAdversaire"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp" />










    <View
        android:layout_width="fill_parent"
        android:layout_height="4px"
        android:layout_below="@+id/titre"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="2dp"
        android:background="@android:color/white" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="4px"
        android:layout_alignTop="@+id/coupAdversaire"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/helpRto"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/paintView"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-60dp"
        android:layout_toEndOf="@+id/valider"
        android:background="@drawable/buttonshapecolor"
        android:text="H"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        android:textStyle="bold|italic" />


</RelativeLayout>